# HaskellKatas

./: .gitignore  .travis.yml  HaskellKatas.cabal  LICENSE  README.md
app/Bingo/: Main.hs
app/Contacts/: Main.hs
app/Fibonacci/: Main.hs
app/FindingTheRightTriangle/: Main.hs
app/FizzBuzz/: Main.hs
app/Potter/: Main.hs
app/PrimeFactors/: Main.hs
app/RockPaperScissors/: Main.hs
app/RomanNumerals/: Main.hs
app/StringCalculator/: Main.hs
src/: FizzBuzz.hs
src/Bingo/: Bingo.hs
src/Contacts/: Contacts.hs
src/Fibonacci/: Fibonacci.hs
src/FindingTheRightTriangle/: FindingTheRightTriangle.hs
src/FizzBuzz/: FizzBuzz.hs
src/Potter/: Potter.hs
src/PrimeFactors/: PrimeFactors.hs
src/RockPaperScissors/: RockPaperScissors.hs
src/RomanNumerals/: RomanNumerals.hs
src/StringCalculator/: StringCalculator.hs
src/Utils/: List.hs
test/: FizzBuzzSpec.hs
test/Bingo/: BingoSpec.hs
test/Contacts/: ContactsSpec.hs
test/Fibonacci/: FibonacciSpec.hs
test/FindingTheRightTriangle/: FindingTheRightTriangleSpec.hs
test/FizzBuzz/: FizzBuzzSpec.hs
test/Potter/: PotterSpec.hs
test/PrimeFactors/: PrimeFactorsSpec.hs
test/RockPaperScissors/: RockPaperScissorsSpec.hs
test/RomanNumerals/: RomanNumeralsSpec.hs
test/StringCalculator/: StringCalculatorSpec.hs
