name:                HaskellKatas
version:             0.1.0.0
synopsis:            Haskell training repository.
description:         Please see README.md
homepage:            https://github.com/pedrovgs/HaskellKatas
license:             Apache-2.0
license-file:        LICENSE
author:              Pedro Vicente G칩mez S치nchez
maintainer:          pedrovicente.gomez@gmail.com
copyright:           2017 Pedro Vicente G칩mez S치nchez
category:            Training
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Utils.List
                     , FizzBuzz.FizzBuzz
                     , StringCalculator.StringCalculator
                     , FindingTheRightTriangle.FindingTheRightTriangle
                     , RockPaperScissors.RockPaperScissors
                     , Bingo.Bingo
                     , Potter.Potter
                     , RomanNumerals.RomanNumerals
                     , PrimeFactors.PrimeFactors
                     , Fibonacci.Fibonacci
  build-depends:       base >= 4.7 && < 5
                     , split
                     , random
                     , mtl
  default-language:    Haskell2010

executable HaskellKatas-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HaskellKatas
  default-language:    Haskell2010

test-suite HaskellKatas-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HaskellKatas
                     , hspec
                     , QuickCheck
                     , tuple
                     , random
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/HaskellKatas
